//////////////////////////////////////////////////////////////
// 🔹 BẢNG QUẢN LÝ NGƯỜI DÙNG & PHÂN QUYỀN
//////////////////////////////////////////////////////////////
Table roles {
  id int [pk, increment]                        
  name varchar                                  // Tên vai trò (Admin, Cư dân, Thu ngân,...)
  description text                              // Mô tả chức năng / quyền hạn
}

Table users {
  id int [pk, increment]                        
  username varchar [not null, unique]           // Tên đăng nhập
  password varchar [not null]                   // Mật khẩu (đã mã hóa)
  email varchar [unique]                        // Email
  role_id int [ref: > roles.id]                 // Vai trò
  avatar_url varchar                            // Ảnh đại diện
  status tinyint [default: 1]                   // 0:'inactive', 1:'active'
  created_at timestamp                          // Ngày tạo
  updated_at timestamp                          // Cập nhật gần nhất
}

Table staffs {
  id int [pk, increment]                        
  user_id int [ref: > users.id]                 // Tài khoản liên kết
  full_name varchar                             // Họ tên
  gender tinyint                                // 1:nam, 2:nữ, 3:khác
  phone varchar                                 // Số điện thoại
  dob date                                      // Ngày sinh
  id_card varchar [unique]                      // CCCD/CMND
  position varchar                              // Chức vụ
  department varchar                            // Phòng ban
  start_date date                               // Ngày bắt đầu làm
  status tinyint [default: 1]                   // 0:'nghỉ', 1:'đang làm', 2:'nghỉ phép'
}

//////////////////////////////////////////////////////////////
// 🔹 CƯ DÂN & CĂN HỘ
//////////////////////////////////////////////////////////////
Table residents {
  id int [pk, increment]                        
  user_id int [ref: > users.id]                 // Tài khoản liên kết
  full_name varchar                             // Họ tên
  gender tinyint                                // 1:nam, 2:nữ, 3:khác
  phone varchar                                 // Số điện thoại
  dob date                                      // Ngày sinh
  id_card varchar [unique]                      // CCCD
  place_of_birth varchar                        // Nơi sinh
  ethnicity varchar                             // Dân tộc
  occupation varchar                            // Nghề nghiệp
  hometown varchar                              // Quê quán
  household_no varchar                          // Mã hộ dân
  registered_at timestamp                       // Ngày đăng ký
  status tinyint [default: 1]                   // 1:'đang ở', 2:'tạm vắng', 3:'chuyển đi'
}

Table apartment_types {
  id int [pk, increment]                        // Mã loại căn hộ
  name varchar                                  // Tên loại (Studio, 1PN,...)
  description text                              // Mô tả
  layout_image varchar                          // Ảnh sơ đồ
}

Table apartments {
  id int [pk, increment]                        // Mã căn hộ
  apartment_code varchar [not null, unique]     // Mã định danh (vd: A101)
  building varchar                              // Tòa nhà
  type_id int [ref: > apartment_types.id]       // Loại căn
  area float                                    // Diện tích (m2)
  status tinyint                                // 0:'Trống', 1:'Đang ở'
  floor int                                     // Tầng
}

Table resident_apartment {
  id int [pk, increment]                        // Liên kết cư dân - căn hộ
  resident_id int [ref: > residents.id]
  apartment_id int [ref: > apartments.id]
  relationship varchar                          // Quan hệ (chủ hộ, người thân) 
  is_living boolean [not null, default: 1]      // Đang ở (1 người có thể chủ nhiều hộ nhưng chỉ ở 1 hộ)
  start_date date                               // Ngày bắt đầu
  end_date date                                 // Ngày kết thúc
  created_at date                               // Ngày thêm
  updated_at date
}

Table vehicles {
  id int [pk, increment]
  apartment_id int [ref: > apartments.id]
  type tinyint                                  // 1:'car', 2:'motorbike', 3:'bicycle'
  brand varchar
  license_plate varchar [unique]
  color varchar
  status tinyint [default: 1]                   // 0:'inactive', 1:'active'
}

//////////////////////////////////////////////////////////////
// 🔹 ĐỢT THU
//////////////////////////////////////////////////////////////
Table collection_periods {
  id int [pk, increment]
  name varchar
  type tinyint                                  // 1:'monthly', 2:'quarterly', 3:'yearly', 0:'custom'
  start_date date
  end_date date
  description text
  created_at timestamp
  created_by int [ref: > users.id]
  status tinyint [default: 1]                   // 0:'closed', 1:'open'
}

//////////////////////////////////////////////////////////////
// 🔹 DỊCH VỤ & ĐĂNG KÝ
//////////////////////////////////////////////////////////////
Table services {
  id int [pk, increment]
  name varchar
  description text
  price int
  unit varchar                                  // tháng, lượt, m2, người
  status boolean [default: 1]                   // 0:'inactive', 1:'active'
}

Table service_registrations {
  id int [pk, increment]
  apartment_id int [ref: > apartments.id]
  service_id int [ref: > services.id]
  start_date date
  end_date date
  status boolean [default: 1]                   // 0:'inactive', 1:'active'
}

//////////////////////////////////////////////////////////////
// 🔹 HÓA ĐƠN & THANH TOÁN
//////////////////////////////////////////////////////////////
Table invoices {
  id int [pk, increment]
  apartment_id int [ref: > apartments.id]
  period_id int [ref: > collection_periods.id]
  total_amount bigint
  end_date date                                  // Hạn nộp
  status tinyint [default: 0]                    // 0:'unpaid', 1:'paid', 2:'overdue', 3:'cancelled'
  created_at timestamp
  created_by int [ref: > users.id]
  note text
  paid_at date                                   // Ngày nộp
}

Table invoice_items {
  id int [pk, increment]                        // Mã chi tiết hóa đơn
  invoice_id int [ref: > invoices.id]           // Mã hóa đơn
  service_id int [ref: > services.id]           // Mã dịch vụ
  quantity int                                  // Số lượng
  unit_price int                                // Đơn giá
  amount int                                    // Thành tiền (quantity * unit_price)
  note text                                     // Ghi chú
  created_at timestamp                          // Ngày tạo
  updated_at timestamp                          // Ngày cập nhật
}

Table payments {
  id int [pk, increment]
  invoice_id int [ref: > invoices.id]
  resident_id int [ref: > residents.id]
  method varchar                                // credit_card, cash
  amount bigint
  paid_at timestamp
  transaction_code varchar
}

Table account_balances {
  id int [pk, increment]
  apartment_id int [ref: > apartments.id]
  balance int [default: 0]
  last_update timestamp
}

//////////////////////////////////////////////////////////////
// 🔹 THIẾT BỊ & BẢO TRÌ
//////////////////////////////////////////////////////////////
Table work_types {
  id int [pk, increment]                        // Mã loại công việc
  name varchar                                  // Điện, Nước, Xây dựng, Cảnh quan, Thang máy...
  description text                              // Mô tả
}

Table maintenance_requests {
  id int [pk, increment]                       
  resident_id int [ref: > residents.id]         // Cư dân yêu cầu
  apartment_id int [ref: > apartments.id, null] // Null nếu là sự cố công cộng
  location varchar                              // Mô tả vị trí nếu không ở trong căn hộ (vd: "Hành lang tầng 5", "Sảnh A")
  title varchar                                 // Tiêu đề yêu cầu
  description text                              // Mô tả chi tiết
  images json                                   // Danh sách ảnh (URL/path)
  status tinyint [default: 0]                   // 0:'pending', 1:'done', 2:'cancelled', 3:'in progress'
  result text                                   // Kết quả xử lý
  work_type_id int [ref: > work_types.id]       // Mã loại công việc
  assigned_to int [ref: > staffs.id]            // Nhân viên được phân công
  created_at timestamp                          // Ngày tạo
  resolved_at timestamp                         // Ngày hoàn thành
}

Table maintenance_schedules {
  id int [pk, increment]                       
  title varchar                         // Tên đợt bảo trì (Hiển thị lên thông báo)
  description text                      // Chi tiết công việc (vd: "Tra dầu, kiểm tra cáp...")
  maintenance_object varchar            // Đối tượng cần bảo trì (vd: "Thang máy", "Hồ bơi", "Máy phát điện")
  location varchar                      // Vị trí (vd: "Tòa A", "Toàn khu", "Tầng hầm")
  start_at timestamp                            // Thời gian bắt đầu
  end_at timestamp                              // Thời gian kết thúc
  assigned_to int [ref: > staffs.id]            // Nhân viên thực hiện
  status tinyint [default: 0]                   // 0:'scheduled', 1:'completed'
  created_at timestamp
  created_by int [ref: > users.id]
}

//////////////////////////////////////////////////////////////
// 🔹 THÔNG BÁO & TIN TỨC
//////////////////////////////////////////////////////////////
Table notifications {
  id int [pk, increment]
  title varchar
  content text
  category tinyint                              // 1:'system', 2:'event', 3:'fee', 4:'maintenance', 5:'other'
  created_at timestamp
  created_by int [ref: > users.id]
}

Table notification_receivers {
  id int [pk, increment]
  notification_id int [ref: > notifications.id]
  user_id int [ref: > users.id]
  is_read boolean
  read_at timestamp
}

Table news {
  id int [pk, increment]
  title varchar
  content text
  created_at timestamp
  category int                                  // event, thông báo, hướng dẫn, tin nội khu
}

//////////////////////////////////////////////////////////////
// 🔹 BÁO CÁO, DỰ ÁN & CƠ SỞ VẬT CHẤT
//////////////////////////////////////////////////////////////
Table financial_reports {
  id int [pk, increment]
  title varchar
  period_id int [ref: > collection_periods.id]
  total_income bigint
  total_expense bigint
  created_at timestamp
}

Table projects {
  id int [pk, increment]
  name varchar
  description text
  image_url varchar
}

Table facilities {
  id int [pk, increment]
  name varchar
  description text
  image_url varchar
}

//////////////////////////////////////////////////////////////
// 🔹 LIÊN HỆ / THÔNG TIN CHUNG CƯ
//////////////////////////////////////////////////////////////
Table contacts {
  id int [pk, increment]
  email varchar
  phone varchar
  address varchar
  map_embed_url text
}

//////////////////////////////////////////////////////////////
// 🔹 Mã OTP
//////////////////////////////////////////////////////////////
Table otps {
  id int [pk, increment]
  email varchar [unique]
  code varchar 
  expiresAt timestamp
  createdAt timestamp
  updatedAt timestamp
}